--- a/ui/webui/resources/cr_components/composebox/contextual_entrypoint_and_carousel.css
+++ b/ui/webui/resources/cr_components/composebox/contextual_entrypoint_and_carousel.css
@@ -36,7 +36,7 @@
 
 #contextEntrypoint {
   color: var(--color-searchbox-results-foreground);
-  padding-inline: var(--contextual-entrypoint-and-carousel-context-menu-container-inline-start, 8px);
+  padding-inline: 8px;
 }
 
 #toolChipsContainer {
